# adaptive-llm

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/db/migrations/: 001_init.sql
app/src/main/cpp/: CMakeLists.txt  native_db.cpp  native_engine.cpp
app/src/main/java/com/example/adaptivellm/: MainActivity.kt
app/src/main/java/com/example/adaptivellm/analytics/: AnalyticsLogger.kt
app/src/main/java/com/example/adaptivellm/device/: DeviceDetector.kt  DeviceProfile.kt
app/src/main/java/com/example/adaptivellm/embedding/: EmbeddingModel.kt
app/src/main/java/com/example/adaptivellm/eviction/: ConflictGbnf.kt  ConflictPrompt.kt  EvictionEngine.kt  ExtractionGbnf.kt  ExtractionPrompt.kt
app/src/main/java/com/example/adaptivellm/inference/: InferenceEngine.kt  InferenceEngineImpl.kt
app/src/main/java/com/example/adaptivellm/model/: DownloadService.kt  ModelConfig.kt  ModelDownloader.kt  ModelSelector.kt
app/src/main/java/com/example/adaptivellm/prompt/: PromptComposer.kt
app/src/main/java/com/example/adaptivellm/retrieval/: RetrievalEngine.kt
app/src/main/java/com/example/adaptivellm/settings/: SettingsRepository.kt
app/src/main/java/com/example/adaptivellm/storage/: ChatKvCacheManager.kt  ChatRepository.kt  FactCleanupWorker.kt  FactsRepository.kt  MemoryDatabase.kt  MemoryDatabaseHelper.kt  MigrationRunner.kt  SnapshotBaseManager.kt
app/src/main/java/com/example/adaptivellm/ui/: ChatListScreen.kt  ChatScreen.kt  DownloadScreen.kt  FactsMemoryScreen.kt  MainViewModel.kt  MarkdownText.kt  SettingsScreen.kt  SetupScreen.kt
app/src/main/java/com/example/adaptivellm/ui/theme/: Color.kt  Theme.kt  Typography.kt
app/src/main/java/com/example/adaptivellm/update/: ApkInstaller.kt  UpdateChecker.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: locales_config.xml
gradle/: libs.versions.toml
